added manage special permission
