# src/main/java/com/pratishthan/usermanagement/controller/SubscriptionUserController.java
@@ -1,9 +1,10 @@
 package com.pratishthan.usermanagement.controller;
 
 import com.pratishthan.usermanagement.dto.PermissionListDTO;
-import com.pratishthan.usermanagement.dto.PermissionUpdateDTO;
+import com.pratishthan.usermanagement.dto.SpecialPermissionDTO;
 import com.pratishthan.usermanagement.dto.SubscriptionUserDTO;
 import com.pratishthan.usermanagement.service.SubscriptionUserService;
+import java.util.List;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
@@ -38,21 +39,12 @@ public class SubscriptionUserController {
         return ResponseEntity.ok(subscriptionUserService.getPermissionsForSubscriptionUser(subscriptionId, userId));
     }
 
-    @PostMapping("/subscription/{subscriptionId}/user/{userId}/permissions/add")
-    public ResponseEntity<SubscriptionUserDTO> addPermissions(
+    @PostMapping("/subscription/{subscriptionId}/user/{userId}/special-permissions")
+    public ResponseEntity<SubscriptionUserDTO> upsertSpecialPermissions(
             @PathVariable Long subscriptionId,
             @PathVariable Long userId,
-            @RequestBody PermissionUpdateDTO update
+            @RequestBody List<SpecialPermissionDTO> permissions
     ) {
-        return ResponseEntity.ok(subscriptionUserService.addSpecialPermissions(subscriptionId, userId, update));
-    }
-
-    @PostMapping("/subscription/{subscriptionId}/user/{userId}/permissions/remove")
-    public ResponseEntity<SubscriptionUserDTO> removePermissions(
-            @PathVariable Long subscriptionId,
-            @PathVariable Long userId,
-            @RequestBody PermissionUpdateDTO update
-    ) {
-        return ResponseEntity.ok(subscriptionUserService.removeSpecialPermissions(subscriptionId, userId, update));
+        return ResponseEntity.ok(subscriptionUserService.upsertSpecialPermissions(subscriptionId, userId, permissions));
     }
 }
